--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <title>Bloodborne - Boss List</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="demo" style="font-family: 'Space Mono', monospace; font-size: 17px">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
@@ -20,34 +21,99 @@
             <!-- <div class="lewo col-4">
 
             </div> -->
-            <div class="srodek col">
+            <div class="srodek col mx-0 px-0">
                 <div id="header">
-                    <!-- <img src="bloodborne.png" alt="bloodborne"> -->
+                    <img src="bloodborne.png" class="mt-3" alt="bloodborne" width="50%" height="auto">
                     <!-- <h2>Bloodborne</h2> -->
-                    <!-- <p>Postęp</p> -->
+                    <p style="color: red;">Postęp</p>
                 </div>
-                <div id="lista">
+                <div class="lista">
                     <ul>
-                        <li class="boss1">pierwszy</li>
-                        <li class="boss2">drugi</li>
-                        <li class="boss3">trzeci</li>
-                        <li class="boss4">czwarty</li>
-                        <li class="boss5">piaty</li>
-                        <li class="boss6">szosty</li>
-                        <li class="boss7">siodmy</li>
-                        <li class="boss8">osmy</li>
-                        <li class="boss9">dziewiaty</li>
-                        <li class="boss10">dziesiaty</li>
-                        <li class="boss11">jedenasty</li>
-                        <li class="boss12">dwunasty</li>
-                        <li class="boss13">trzynasty</li>
-                        <li class="boss14">czternasty</li>
-                        <li class="boss15">pietnasty</li>
-                        <li class="boss16">szesnasty</li>
-                        <li class="boss17">siedemnasty</li>
-                        <li class="boss18">osiemnasty</li>
-                        <li class="boss19">dziewietnasty</li>
-                        <li class="boss20">dwudziesty</li>
+                        <li class="boss1">
+                            Bestia Kleryka<br>
+                            <button onclick="pokazZdjecie1()" type="button" class="btn1 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/cleric_beast_boss.jpg" class="image1 hidden" alt="cleric_beast">
+                        </li>
+                        <li class="boss2">
+                            Ojciec Gascoigne<br>
+                            <button onclick="pokazZdjecie2()" type="button" class="btn2 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/father_gascoigne_boss.jpg" class="image2 hidden" alt="father_gascoigne">
+                        </li>
+                        <li class="boss3">
+                            Pastor Amelia<br>
+                            <button onclick="pokazZdjecie3()" type="button" class="btn3 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/vicar_amelia.jpg" class="image3 hidden" alt="vicar_amelia">
+                        </li>
+                        <li class="boss4">
+                            Bestia Żądna Krwi<br>
+                            <button onclick="pokazZdjecie4()" type="button" class="btn4 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/blood-starved_beast_boss.jpg" class="image4 hidden" alt="blood-starved_beast">
+                        </li>
+                        <li class="boss5">
+                            Mroczna Bestia Paarl<br>
+                            <button onclick="pokazZdjecie5()" type="button" class="btn5 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/darkbeast_paarl_boss.jpg" class="image5 hidden" alt="Paarl">
+                        </li>
+                        <li class="boss6">
+                            Wiedźma z Hemwick<br>
+                            <button onclick="pokazZdjecie6()" type="button" class="btn6 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/witch_of_hemwick_boss.jpg" class="image6 hidden" alt="witch_of_hemwick">
+                        </li>
+                        <li class="boss7">
+                            Amygdala<br>
+                            <button onclick="pokazZdjecie7()" type="button" class="btn7 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/amygdala_boss.jpg" class="image7 hidden" alt="amygdala">
+                        </li>
+                        <li class="boss8">
+                            Cienie z Yharnam<br>
+                            <button onclick="pokazZdjecie8()" type="button" class="btn8 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/Shadow_of_Yharnam.jpg" class="image8 hidden" alt="shadow_of_yharnam">
+                        </li>
+                        <li class="boss9">
+                            Męczennik Logarius<br>
+                            <button onclick="pokazZdjecie9()" type="button" class="btn9 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/logarius_boss.jpg" class="image9 hidden" alt="logarius">
+                        </li>
+                        <li class="boss10">
+                            Rom, Tępy Pająk<br>
+                            <button onclick="pokazZdjecie10()" type="button" class="btn10 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/rom_boss.jpg" class="image10 hidden" alt="rom">
+                        </li>
+                        <li class="boss11">
+                            Odrodzony<br>
+                            <button onclick="pokazZdjecie11()" type="button" class="btn11 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/the_one_reborn_boss.jpg" class="image11 hidden" alt="the_one_reborn">
+                        </li>
+                        <li class="boss12">
+                            Gwiezdny Emisariusz<br>
+                            <button onclick="pokazZdjecie12()" type="button" class="btn12 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/celestial_emissary_boss.jpg" class="image12 hidden" alt="celestial_emissary">
+                        </li>
+                        <li class="boss13">
+                            Ebrietas, Córka Kosmosu<br>
+                            <button onclick="pokazZdjecie13()" type="button" class="btn13 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/ebrietas_boss.jpg" class="image13 hidden" alt="ebrietas">
+                        </li>
+                        <li class="boss14">
+                            Micolash, Gospodarz Koszmaru<br>
+                            <button onclick="pokazZdjecie14()" type="button" class="btn14 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/micolash_boss.jpg" class="image14 hidden" alt="micolash">
+                        </li>
+                        <li class="boss15">
+                            Mamka Mergo<br>
+                            <button onclick="pokazZdjecie15()" type="button" class="btn15 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/mergos_wet_nurse_boss.jpg" class="image15 hidden" alt="mergos_wet_nurse">
+                        </li>
+                        <li class="boss16">
+                            Gehrman, Pierwszy Tropiciel<br>
+                            <button onclick="pokazZdjecie16()" type="button" class="btn16 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/gehrman_boss.jpg" class="image16 hidden" alt="gehrman">
+                        </li>
+                        <li class="boss17">
+                            Obecność Księzyca<br>
+                            <button onclick="pokazZdjecie17()" type="button" class="btn17 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
+                            <img src="boss/moon_presense_boss.jpg" class="image17 hidden" alt="moon_presense">
+                        </li>
                     </ul>
                 </div>
             </div>
