--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <!-- <h2>Bloodborne</h2> -->
                     <p style="color: red;">Postęp</p>
                 </div>
-                <div class="lista">
-                    <ul>
+                <div>
+                    <ul class="lista">
                         <li class="boss1">
                             Bestia Kleryka<br>
                             <button onclick="pokazZdjecie1()" type="button" class="btn1 btn btn-sm btn-dark mt-2 mb-2 wyswietl">Pokaż zdjęcie</button>
