--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <div id="content">
         <div class="row text-center">
-            <!-- <div class="lewo col-4">
-
-            </div> -->
+            <div class="lewo col">
+                ----------------------------
+            </div>
             <div class="srodek col mx-0 px-0">
                 <div id="header">
                     <img src="bloodborne.png" class="mt-3" alt="bloodborne" width="50%" height="auto">
-                    <!-- <h2>Bloodborne</h2> -->
                     <p style="color: red;">Postęp</p>
                 </div>
                 <div>
@@ -117,9 +116,9 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="prawo col-4">
-
-            </div> -->
+            <div class="prawo col">
+                ----------------------------
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
