--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
             <div class="srodek col mx-0 px-0">
                 <div id="header">
                     <img src="bloodborne.png" class="mt-3" alt="bloodborne" width="50%" height="auto">
-                    <p style="color: red;">Postęp</p>
+                    <p style="color: red;">
+                        Postęp
+                        <!-- <div id="postep"></div> -->
+                    </p>
                 </div>
                 <div>
                     <ul class="lista">
